# phish-scope

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
examples/: run_workflow.py
remote-browser/: .dockerignore  Dockerfile  docker-compose.yml
src/phish_scope/core/: browser.py  report_generator.py
src/phish_scope/core/analyzers/: __init__.py  dom.py  javascript.py  network.py
src/phish_scope/llm/clients/: __init__.py  provider_type.py
src/phish_scope/llm/prompts/: phishing_analysis.yaml
src/phish_scope/workflow/: graph.py  node_types.py  nodes.py  state.py
