[project]
name = "phish-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "mcp>=1.25.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "broad-exception-caught",
]

[tool.pylint.reports]
fail-under = 7.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
